--- a/views/base.twig
+++ b/views/base.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,29 +12,21 @@
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon-precomposed.png"/>
 
-    <!-- Bootstrap CSS -->
+    <!-- css -->
     <link rel="stylesheet" href="https://jvimedia.org/static/bootstrap-3.1.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://jvimedia.org/static/bootstrap-3.1.1/css/bootstrap.css">
-
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://jvimedia.org/static/font-awesome-4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://jvimedia.org/static/font-awesome-4.0.3/css/font-awesome.min.css"/>
-
-    <!-- Bootstrap Core Custom CSS -->
     <link rel="stylesheet" href="https://jvimedia.org/static/bootstrap/css/bootstrap-fugue-min.css"/>
-
-    <!-- Bootstrap Social CSS -->
     <link rel="stylesheet" href="https://jvimedia.org/static/bootstrap/css/bootstrap-social.css"/>
 
-    <!-- Modifications -->
+    <!-- modifications -->
     <link rel="stylesheet" href="/css/mod.css">
 
-    <!-- Humans.TXT -->
+    <!-- humans.txt -->
     <link rel="author" href="/humans.txt"/>
-  
-    <title><?php echo $title; ?></title>   
-    
-    <?php date_default_timezone_set('UTC'); ?>
+
+    <title>{{ title|default("Purplapp") }}</title>
+
+    <!-- Nasty IE stuff -->
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -44,12 +36,12 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-  </head>
 
-  <body>
-        <!-- Static navbar -->
-        <div class="navbar navbar-default navbar-static-top" role="navigation">
-          <div class="container">
+</head>
+<body>
+    <!-- Static navbar -->
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -59,24 +51,46 @@
                 </button>
                 <a class="navbar-brand" href="/">Purplapp</a>
             </div>
+
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/account.php"><i class="fa fa-user fa-fw"></i>Account Tools</a></li>
-                    <li><a href="/broadcast.php"><i class="fa fa-bolt fa-fw"></i>Broadcast Tools</a></li>
-                    <li><a href="/donate.php"><i class="fa fa-bitcoin fa-fw"></i>Donate</a></li>
-                    <li><a href="/about.php"><i class="fa fa-info fa-fw"></i>About</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@<?php echo $auth_username; ?> <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="<?php echo $alpha; echo $auth_username;?>" target="_blank"><i class="fa fa-adn"></i> Alpha Profile</a></li>
-                            <!-- <li class="divider"></li> -->
-                            <li><a href="/ADN_php/signout.php"><i class="fa fa-sign-out"></i> Sign out</a></li>
-                        </ul>
+                    <li>
+                        <a href="/account.php"><i class="fa fa-user fa-fw"></i>Account Tools</a>
+                    </li>
+                    <li>
+                        <a href="/broadcast.php"><i class="fa fa-bolt fa-fw"></i>Broadcast Tools</a>
+                    </li>
+                    <li>
+                        <a href="/donate.php"><i class="fa fa-bitcoin fa-fw"></i>Donate</a>
+                    </li>
+                    <li>
+                        <a href="/about.php"><i class="fa fa-info fa-fw"></i>About</a>
                     </li>
                 </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    {% include "auth_nav_options.twig" %}
+                </ul>
             </div><!--/.nav-collapse -->
-          </div>
         </div>
-        <div class="container">
+    </div>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
+    <div class="container">
+        <div class="col-md-12">
+            <hr>
+            <p>
+                &copy; Purplapp 2014.
+                <br>
+                <a href="/about.php">About Us</a> &nbsp; - &nbsp; <a href="/images/imprint.png">Imprint</a> &nbsp; - &nbsp; <a href="/legal/privacy.php">Privacy</a> &nbsp; - &nbsp; <a href="/legal/terms.php">Terms of Service</a>
+            </p>
+        </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://jvimedia.org/static/jquery/2.1.1/jquery-2.1.1.min.js"></script>
+    <script src="https://jvimedia.org/static/bootstrap-3.1.1/js/bootstrap.min.js"></script>
+</body>
+</html>
